tera/src/snapshot_tests/snapshots/tera__tests__parser__parser_errors@unclosed_variable.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/unclosed_variable.txt
---
 Syntax error --> [unclosed_variable.txt:1:4]
  |
1 | {{ 1
  |     ^---
  = Unexpected end of input
